<resources>
    <string name="app_name">KGK Tracking</string>
    <string name="action_settings">Settings</string>
    <string name="crash_toast_text">Application terminated</string>
    <string name="updating_label">Update</string>
    <string name="new_version_available_label">New version available</string>
    <string name="download_label">Download</string>
    <string name="device_list_activity_action_bar_label">Devices</string>
    <string name="information_action_bar_label">Information</string>
    <string name="history_action_bar_label">History</string>
    <string name="path_action_bar_label">Track</string>
    <string name="date_picker_action_bar_label">Period</string>
    <string name="map_custom_action_bar_label">Map</string>
    <string name="settings_action_bar_label">Settings</string>
    <string name="login_hint">Login</string>
    <string name="password_hint">Password</string>
    <string name="login_button_label">Log In</string>
    <string name="remember_me_text">Remember Me</string>
    <string name="try_demo_button_label">Try Demo</string>
    <string name="wrong_login_or_password_label">Wrong login or password</string>
    <string name="login_progress_dialog_title">Login…</string>
    <string name="login_progress_dialog_message">Authentication in progress</string>
    <string name="no_registered_devices_toast">You have no registered devices</string>
    <string name="server_error">Server error</string>
    <string name="product_activity_title">Products</string>
    <string name="development_progress_dialog_title">Attention!</string>
    <string name="development_progress_dialog_message">Current version supports only Actis beacons</string>
    <string name="ordering_by_type_label">Type</string>
    <string name="ordering_by_group_label">Group</string>
    <string name="detecting_mode_text">Message in detecting mode</string>
    <string name="last_positioning_text">Last Positioning:</string>
    <string name="last_action_text">Last Action:</string>
    <string name="satellites_label">Satellites</string>
    <string name="voltage_label">Voltage</string>
    <string name="speed_label">Speed</string>
    <string name="charge_label">Charge</string>
    <string name="direction_label">Direction</string>
    <string name="balance_label">Balance</string>
    <string name="temperature_label">Temperature</string>
    <string name="query_button_label">Query</string>
    <string name="history_button_label">History</string>
    <string name="search_on_button_label">Search</string>
    <string name="search_off_button_label">Search: Off</string>
    <string name="map_button_label">Map</string>
    <string name="settings_button_label">Settings</string>
    <string name="search_label">Search</string>
    <string name="no_signals_toast">No signals</string>
    <string name="search_mode_dialog_title">Search mode</string>
    <string name="search_mode_dialog_on">Do you want to activate search mode?</string>
    <string name="search_mode_dialog_off">Do you want to deactivate search mode?</string>
    <string name="download_data_progress_dialog_title">Downloading…</string>
    <string name="download_data_progress_dialog_message">Downloading data from server</string>
    <string name="download_error_toast">Error downloading data</string>
    <string name="query_too_early_dialog_message">Command already sent. Awainitg response from Actis device…</string>
    <string name="demo_warning_dialog_message">This function is not available in demo mode</string>
    <string name="awaiting_confirmation_dialog_message">Setting have been sent. Awaiting confirmation from device</string>
    <string name="on_actis_query_success_message">Location query has been sent. Awaiting coordinates from Actis beacon</string>
    <string name="on_actis_search_turned_on_message">Search on query has been sent. Actis beacon will send coordinates every 20 minutes after receiving command</string>
    <string name="on_actis_search_turned_off_message">Search off query has been sent</string>
    <string name="balance_view_label">Balance:</string>
    <string name="preparing_data_message">Подготовка данных</string>
    <string name="payment_action_label">Пополнить</string>
    <string name="currency_label">rub.</string>
    <string name="select_period_button_label">Period</string>
    <string name="track_button_label">Track</string>
    <string name="list_item_satellites_sign">sat</string>
    <string name="list_item_speed_sign"> km/h</string>
    <string name="list_item_temperature_sign">°C</string>
    <string name="list_item_voltage_sign">V</string>
    <string name="list_item_balance_sign">rub</string>
    <string name="track_drawing_in_progress_dialog_message">Track drawing in progress…</string>
    <string name="choose_period_dialog_message">Choose time period for track</string>
    <string name="action_bar_label">Period</string>
    <string name="header_label">Displaying history</string>
    <string name="from_label">From</string>
    <string name="to_label">To</string>
    <string name="date_button_label">Date</string>
    <string name="time_button_label">Time</string>
    <string name="date_picker_dialog_title">Select date</string>
    <string name="time_picker_dialog_title">Select time</string>
    <string name="wrong_period_message">Wrong period selected</string>
    <string name="not_all_fields_selected_message">Select all fields, please</string>
    <string name="timezone_label">Timezone</string>
    <string name="time_of_signal_label">Time of signal</string>
    <string name="on_command_send_toast">Command has been sent</string>
    <string name="on_command_send_error_toast">Error sending command</string>
    <string name="no_internet_connection_message">No internet connection</string>
    <string name="balance_request_command_wrong_field_message">Balance request command too long</string>
    <string name="connection_period_label">Number of signals</string>
    <string name="connection_per_day_label">per day</string>
    <string name="connection_per_week_label">per week</string>
    <string name="number_of_sms_omissions_label">Number of SMS omissions</string>
    <string name="gps_positioning_period_label">GPS positioning period (min)</string>
    <string name="balance_control_limit_label">Balance control limit (rub.)</string>
    <string name="balance_request_command_label">Balance request command</string>
    <string name="gprs_label">GPRS</string>
    <string name="send_button_label">Send</string>
    <string name="settings_gprs_spinner_on">On</string>
    <string name="settings_gprs_spinner_off">Off</string>
    <string name="monitoring_activity_toolbar_title">Location</string>
    <string name="daily_track_button_label">Track for day</string>
    <string name="current_location_button_label">Current Location</string>
    <string name="report_button_label">Detailed report</string>
    <string name="location_button_label">Location</string>
    <string name="no_data_for_device_message">No data for device</string>
    <string name="device_current_location_menu_description">Menu</string>
    <string name="select_map_dialog_title">Select map</string>
    <string name="kgk_map">OSM KGK</string>
    <string name="osm_map">OSM</string>
    <string name="satellite_map">Satellite</string>
    <string name="hybrid_map">Hybrid</string>
    <string name="google_map">Google</string>
    <string name="detail_report_activity_toolbar_title">Detail report</string>
    <string name="building_detail_report_label">Period</string>
    <string name="delta_hint">Minimal stop time (sec)</string>
    <string name="offset_hint">Time offset in UTC (min)</string>
    <string name="help_screen_title">Help</string>
    <string name="query_function_description">With this button you can get current position of
        your Actis beacon</string>
    <string name="search_function_description">Search button turns your Actis beacon search mode on
        and off. In search mode device will send coordinates every 20 minutes</string>
    <string name="history_screen_description">History screen contains last 10 signals from your
        Actis beacon. Information is displayed with grouped list of dates. Each date entry cosists of
        corresponding signals</string>
    <string name="from_history_screen_navigation_description">From history screen you can navigate to
        Period or Track screen</string>
    <string name="period_screen_description">Here you can choose the date range for history list
        of signals. Use buttons to choose range and click OK to filter signals</string>
    <string name="track_screen_description">On Track screen you can see a map with signals, connected
        by polyline. The signals are from history list. To see detailed information about a signal
        you can tap on corresponding marker</string>
    <string name="auto_search_description_title">Autosearch</string>
    <string name="auto_search_description">В режиме Автопоиск устройство каждые 20 минут
        выходит на связь и отправляет координаты своего местоположения.\n\n

        Включение режима Автопоиск\n\n
        @1\n\n

        Для включения режима Автопоиск сдвиньте ползунок с изображением
        серого замка вправо. При этом цвет замка изменится на желтый. В
        зависимости от настроек устройства, время ожидания включения режима
        Автопоиск может составить от 1 минуты до 24 часов. В течение указанного
        промежутка времени цвет замка будет оставаться желтым. В момент
        включения режима Автопоиск цвет замка изменится на зеленый.\n\n

        Выключение режима Автопоиск\n\n
        @2\n\n

        Для выключения режима Автопоиск сдвиньте ползунок с изображением
        зеленого замка влево. Цвет замка изменится на желтый. В зависимости от
        момента отправки команды устройству, время ожидания выключения
        режима Автопоиск составит от 1 до 20 минут. В течение указанного
        промежутка времени цвет замка будет оставаться желтым. В момент
        выключения режима Автопоиск цвет замка изменится на серый.
    </string>
    <string name="auto_search_on_label">Включение режима Автопоиск</string>
    <string name="auto_search_off_label">Выключение режима Автопоиск</string>
    <string name="turning_on_word">включения</string>
    <string name="turning_off_word">выключения</string>
    <string name="grey_word_1">серого</string>
    <string name="grey_word_2">серый</string>
    <string name="yellow_word_1">желтый</string>
    <string name="yellow_word_2">желтым</string>
    <string name="green_word_1">зеленый</string>
    <string name="green_word_2">зеленого</string>
    <string name="lbs_description_title">Определение координат устройства по вышкам GSM</string>
    <string name="english_language_label">English</string>
    <string name="russian_language_label">Russian</string>
    <string name="ukrainian_language_label">Ukrainian</string>
    <string name="monitoring_kgk_map_label">KGK</string>
    <string name="monitoring_osm_map_label">OSM</string>
    <string name="monitoring_google_map_type">Google</string>
    <string name="monitoring_satellite_map_type">Satellite</string>
    <string name="monitoring_choose_vehicle">Choose Vehicle</string>
    <string name="monitoring_choose_vehicle_group">Choose Vehicle Group</string>
    <string name="monitoring_route_report_settings">Route Report Settings</string>
    <string name="monitoring_profile">Profile</string>
    <string name="monitoring_settings">Settings</string>
    <string name="monitoring_help">Help</string>
    <string name="monitoring_about">About</string>
    <string name="monitoring_about_screen_version">Version:</string>
    <string name="monitoring_about_screen_last_update">Last update:</string>
    <string name="monitoring_about_screen_developer">Developer:</string>
    <string name="monitoring_about_screen_developer_name">KGK</string>
</resources>