<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingLeft="@dimen/standard_horizontal_padding"
    android:paddingStart="@dimen/standard_horizontal_padding"
    android:paddingRight="@dimen/standard_horizontal_padding"
    android:paddingEnd="@dimen/standard_horizontal_padding"
    android:paddingBottom="8dp"
    android:background="@color/monitoring_light_gray">

    <ImageButton
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:src="@drawable/hide_menu_button_icon"
        android:background="@color/monitoring_light_gray"
        android:id="@+id/monitoring_activity_menu_hide_button"
        tools:ignore="ContentDescription" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/monitoring_kgk_map_label"
            android:id="@+id/monitoring_activity_menu_kgk_map_button"
            style="@style/MonitoringMenuGeneralButton" />

        <Button
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/monitoring_osm_map_label"
            android:id="@+id/monitoring_activity_menu_yandex_map_button"
            style="@style/MonitoringMenuGeneralButton" />

        <Button
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/monitoring_google_map_type"
            android:id="@+id/monitoring_activity_menu_google_map_button"
            style="@style/MonitoringMenuGeneralButton" />

        <Button
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/monitoring_satellite_map_type"
            android:id="@+id/monitoring_activity_menu_satellite_map_button"
            style="@style/MonitoringMenuGeneralButton" />

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:id="@+id/monitoring_activity_menu_buttons_layout">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:layout_width="match_parent"
                android:text="@string/monitoring_choose_vehicle"
                android:id="@+id/monitoring_activity_menu_choose_vehicle_button"
                style="@style/MonitoringMenuGeneralButton" />

            <Button
                android:layout_width="match_parent"
                android:text="@string/monitoring_choose_vehicle_group"
                android:id="@+id/monitoring_activity_menu_choose_vehicle_group_button"
                style="@style/MonitoringMenuGeneralButton" />

            <Button
                android:layout_width="match_parent"
                android:text="@string/monitoring_route_report_settings"
                android:id="@+id/monitoring_activity_menu_route_report_settings_button"
                style="@style/MonitoringMenuGeneralButton" />

            <Button
                android:layout_width="match_parent"
                android:text="@string/monitoring_profile"
                android:id="@+id/monitoring_activity_menu_profile_button"
                style="@style/MonitoringMenuGeneralButton" />

            <Button
                android:layout_width="match_parent"
                android:text="@string/monitoring_settings"
                android:id="@+id/monitoring_activity_menu_settings_button"
                style="@style/MonitoringMenuGeneralButton"/>

            <Button
                android:layout_width="match_parent"
                android:text="@string/monitoring_help"
                android:id="@+id/monitoring_activity_menu_help_button"
                style="@style/MonitoringMenuGeneralButton" />

            <Button
                android:layout_width="match_parent"
                android:text="@string/monitoring_about"
                android:id="@+id/monitoring_activity_menu_about_button"
                style="@style/MonitoringMenuGeneralButton" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>