<?xml version="1.0" encoding="utf-8"?>
<RadioGroup
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:id="@+id/dialogSelectMap_radioGroup"
    android:orientation="vertical"
    android:layout_marginTop="20dp"
    android:paddingLeft="20dp"
    android:paddingStart="20dp"
    tools:ignore="RtlSymmetry">

    <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/dialogSelectMap_kgkMap"
        android:text="@string/kgk_map"
        android:textSize="17sp"
        android:layout_marginTop="20dp" />

    <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/dialogSelectMap_osmMap"
        android:text="@string/osm_map"
        android:textSize="17sp"/>

    <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/dialogSelectMap_satelliteMap"
        android:text="@string/satellite_map"
        android:textSize="17sp"/>

    <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/dialogSelectMap_hybridMap"
        android:text="@string/hybrid_map"
        android:textSize="17sp"/>

    <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/dialogSelectMap_googleMap"
        android:text="@string/google_map"
        android:textSize="17sp" />

</RadioGroup>