<?xml version="1.0" encoding="utf-8"?>
<RadioGroup
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:id="@+id/dialogLanguagePicker_radioGroup"
    android:orientation="vertical"
    android:layout_marginTop="20dp"
    android:paddingLeft="20dp"
    android:paddingStart="20dp">

    <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/dialogLanguagePicker_englishButton"
        android:text="@string/english_language_label"
        android:textSize="17sp"
        android:layout_marginTop="20dp" />

    <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/dialogLanguagePicker_russianButton"
        android:text="@string/russian_language_label"
        android:textSize="17sp"/>

    <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/dialogLanguagePicker_ukrainianButton"
        android:text="@string/ukrainian_language_label"
        android:textSize="17sp"/>

</RadioGroup>