<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/standard_horizontal_padding"
    android:paddingStart="@dimen/standard_horizontal_padding"
    android:paddingRight="@dimen/standard_horizontal_padding"
    android:paddingEnd="@dimen/standard_horizontal_padding"
    android:background="@color/monitoring_light_gray">

    <include layout="@layout/monitoring_action_bar" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:shrinkColumns="1">

        <TableRow android:layout_marginBottom="2dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/monitoring_about_screen_version"
                style="@style/MonitoringStandardString" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"
                android:layout_weight="2"
                android:id="@+id/monitoring_activity_about_version_text_view"
                style="@style/MonitoringStandardString"
                tools:text="0.1.1.1" />

        </TableRow>

        <TableRow android:layout_marginBottom="2dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/monitoring_about_screen_last_update"
                style="@style/MonitoringStandardString" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"
                android:layout_weight="2"
                android:text="29.09.2016"
                style="@style/MonitoringStandardString" />

        </TableRow>

        <TableRow>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/monitoring_about_screen_developer"
                style="@style/MonitoringStandardString" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"
                android:layout_weight="2"
                android:text="@string/monitoring_about_screen_developer_name"
                style="@style/MonitoringStandardString" />

        </TableRow>

    </TableLayout>

</LinearLayout>